force-app/main/default/objects/Invoice_Portal_Config__mdt/Invoice_Portal_Config__mdt.object-meta.xml
<CustomObject>
    <label>Invoice Portal Config</label>
    <pluralLabel>Invoice Portal Configs</pluralLabel>
</CustomObject>