force-app/main/default/objects/Invoice_Portal_Config__mdt/fields/ACH_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ACH_Enabled__c</fullName>
    <label>ACH Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>