force-app/main/default/objects/Invoice_Portal_Config__mdt/fields/Credit_Card_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Enabled__c</fullName>
    <label>Credit Card Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>