force-app/main/default/objects/Invoice_Portal_Config__mdt/fields/Invoices_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Per_Page__c</fullName>
    <label>Invoices Per Page</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>