force-app/main/default/objects/Invoice_Portal_Config__mdt/fields/PaymentLink_TTL_Hours__c.field-meta.xml
<CustomField>
    <fullName>PaymentLink_TTL_Hours__c</fullName>
    <label>PaymentLink TTL Hours</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>