force-app/main/default/objects/Invoice_Portal_Config__mdt/fields/Processing_Fee_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee_Enabled__c</fullName>
    <label>Processing Fee Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>