force-app/main/default/objects/Invoice_Portal_Config__mdt/fields/Processing_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee_Percent__c</fullName>
    <label>Processing Fee Percent</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>