force-app/main/default/objects/Invoice_Portal_Config__mdt/fields/Short_Pay_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Short_Pay_Reasons__c</fullName>
    <label>Short Pay Reasons</label>
    <type>TextArea</type>
</CustomField>